@@ -1,7 +1,6 @@
 package org.example.plzdrawing.domain.content.service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.example.plzdrawing.domain.content.Content;
 import org.example.plzdrawing.domain.content.ContentImage;
@@ -21,7 +20,28 @@ public class ContentImageService {
                         .url(fileName)
                         .content(content)
                         .build())
-                .collect(Collectors.toList());
+                .toList();
+        contentImageRepository.saveAll(images);
+    }
+
+    @Transactional(readOnly = true)
+    public List<String> getImages(Content content) {
+        return contentImageRepository
+                .findAllByContent(content)
+                .stream()
+                .map(ContentImage::getUrl)
+                .toList();
+    }
+
+    @Transactional
+    public void updateImages(Content content, List<String> newImages) {
+        contentImageRepository.deleteAllByContent(content);
+        List<ContentImage> images = newImages.stream()
+                .map(fileName -> ContentImage.builder()
+                        .url(fileName)
+                        .content(content)
+                        .build())
+                .toList();
         contentImageRepository.saveAll(images);
     }
 }
